# adapter/controller/gin/handler/album.go
@@ -6,6 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 
 	"go-api-arch-clean-template/adapter/controller/gin/presenter"
+	"go-api-arch-clean-template/api"
 	"go-api-arch-clean-template/entity"
 	"go-api-arch-clean-template/pkg/logger"
 	"go-api-arch-clean-template/usecase"
@@ -21,14 +22,18 @@ func NewAlbumHandler(albumUseCase usecase.AlbumUseCase) *AlbumHandler {
 	}
 }
 
-func albumToResponse(album *entity.Album) *presenter.AlbumResponse {
+func (a *AlbumHandler) albumToResponse(album *entity.Album) *presenter.AlbumResponse {
 	return &presenter.AlbumResponse{
-		Id:          album.ID,
-		Title:       album.Title,
-		ReleaseDate: presenter.ReleaseDate{Time: album.ReleaseDate},
-		Category: presenter.Category{
-			Id:   &album.Category.ID,
-			Name: presenter.CategoryName(album.Category.Name),
+		ApiVersion: api.Version,
+		Data: presenter.Album{
+			Kind:        "album",
+			Id:          album.ID,
+			Title:       album.Title,
+			ReleaseDate: presenter.ReleaseDate{Time: album.ReleaseDate},
+			Category: presenter.Category{
+				Id:   &album.Category.ID,
+				Name: presenter.CategoryName(album.Category.Name),
+			},
 		},
 	}
 }
@@ -37,14 +42,14 @@ func (a *AlbumHandler) CreateAlbum(c *gin.Context) {
 	var requestBody presenter.CreateAlbumJSONRequestBody
 	if err := c.ShouldBindJSON(&requestBody); err != nil {
 		logger.Warn(err.Error())
-		c.JSON(http.StatusBadRequest, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusBadRequest, err.Error()))
 		return
 	}
 
 	category, err := entity.NewCategory(string(requestBody.Category.Name))
 	if err != nil {
 		logger.Warn(err.Error())
-		c.JSON(http.StatusBadRequest, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusBadRequest, err.Error()))
 		return
 	}
 
@@ -57,35 +62,35 @@ func (a *AlbumHandler) CreateAlbum(c *gin.Context) {
 	createdAlbum, err := a.albumUseCase.Create(album)
 	if err != nil {
 		logger.Error(err.Error())
-		c.JSON(http.StatusInternalServerError, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusInternalServerError, err.Error()))
 		return
 	}
 
-	c.JSON(http.StatusCreated, albumToResponse(createdAlbum))
+	c.JSON(http.StatusCreated, a.albumToResponse(createdAlbum))
 }
 
 func (a *AlbumHandler) GetAlbumById(c *gin.Context, ID int) {
 	album, err := a.albumUseCase.Get(ID)
 	if err != nil {
 		logger.Error(err.Error())
-		c.JSON(http.StatusInternalServerError, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusInternalServerError, err.Error()))
 		return
 	}
-	c.JSON(http.StatusOK, albumToResponse(album))
+	c.JSON(http.StatusOK, a.albumToResponse(album))
 }
 
 func (a *AlbumHandler) UpdateAlbumById(c *gin.Context, ID int) {
 	var requestBody presenter.UpdateAlbumByIdJSONRequestBody
 	if err := c.ShouldBindJSON(&requestBody); err != nil {
 		logger.Warn(err.Error())
-		c.JSON(http.StatusBadRequest, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusBadRequest, err.Error()))
 		return
 	}
 
 	category, err := entity.NewCategory(string(requestBody.Category.Name))
 	if err != nil {
 		logger.Warn(err.Error())
-		c.JSON(http.StatusBadRequest, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusBadRequest, err.Error()))
 		return
 	}
 	album := &entity.Album{ID: ID, Title: *requestBody.Title, Category: *category}
@@ -93,17 +98,17 @@ func (a *AlbumHandler) UpdateAlbumById(c *gin.Context, ID int) {
 	updatedAlbum, err := a.albumUseCase.Save(album)
 	if err != nil {
 		logger.Error(err.Error())
-		c.JSON(http.StatusInternalServerError, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusInternalServerError, err.Error()))
 		return
 	}
 
-	c.JSON(http.StatusOK, albumToResponse(updatedAlbum))
+	c.JSON(http.StatusOK, a.albumToResponse(updatedAlbum))
 }
 
 func (a *AlbumHandler) DeleteAlbumById(c *gin.Context, ID int) {
 	if err := a.albumUseCase.Delete(ID); err != nil {
 		logger.Error(err.Error())
-		c.JSON(http.StatusInternalServerError, &presenter.ErrorResponse{Message: err.Error()})
+		c.JSON(presenter.NewErrorResponse(http.StatusInternalServerError, err.Error()))
 		return
 	}
 
